--- a/css/cards.css
+++ b/css/cards.css
@@ -38,22 +38,29 @@
   overflow: hidden;
 }
 .slot{
+  margin:0px;
+  padding:0px;
 
-  display:inline-flex;
+
   border:white 2px solid;
   width: 100px;
   height:80px;
-  padding:0px;
-  margin:0px;
-  overflow: hidden;
-  text-align: center;
+
+  display: inline-flex;
+
+align-items: center;
+justify-content: center;
+
+
+
 }
 
 
 .box{
+
   position: relative;
   padding-top:10px;
-  margin:0px;
+  margin: auto;
   height: 300px;
   width:500px;
   border: 5px black solid;
@@ -70,6 +77,23 @@
   box-shadow:.2em .2em .3em gray;
   border:.08em solid black;
   margin: 5px;
+}
+.textCard{
+
+
+  color:block;
+
+  font-size: 58px;
+  margin:0px;
+  padding:0px;
+  width:100%;
+  height:100%;
+  text-align: center;
+
+
+
+
+
 }
 
 
