added a lot of stuff, big one is the bot. added check, call, raise, fold buttons, currently with some logic

--- a/css/cards.css
+++ b/css/cards.css
@@ -60,7 +60,7 @@ justify-content: center;
 
   position: relative;
   padding-top:10px;
-  margin: auto;
+  margin: 10px;
   height: 300px;
   width:500px;
   border: 5px black solid;
