--- a/css/cards.css
+++ b/css/cards.css
@@ -40,7 +40,7 @@
 .slot{
   margin:0px;
   padding:0px;
-
+  position:relative;
 
   border:white 2px solid;
   width: 100px;
@@ -59,7 +59,8 @@ justify-content: center;
 .box{
 
   position: relative;
-  padding-top:10px;
+
+  padding: 20px;
   margin: 10px;
   height: 300px;
   width:500px;
@@ -95,7 +96,45 @@ justify-content: center;
 
 
 }
+.slot #chips1{
+  position: absolute;
 
+  font-size: .8em;
+  bottom: -22px;
+  border: 1px black solid;
+  width:70px;
+  height:15px;
+
+}
+
+.slot #chips2{
+  position: absolute;
+
+  font-size: .8em;
+  top: -22px;
+  border: 1px black solid;
+  width:70px;
+  height:15px;
+
+}
+
+#textBox{
+  height:120px;
+
+  width:200px;
+  border:1px solid #ccc;
+
+  overflow:auto;
+}
+#messages{
+
+  padding:0px;
+  font-size: 10px;
+
+}
+#line{
+  padding: 2px 0px 8px 5px;
+}
 
 #value{
 
