--- a/css/cards.css
+++ b/css/cards.css
@@ -1,19 +1,37 @@
+.container{
+
+  margin-left: auto;
+  margin-right: auto;
+  width: 600px;
+
+}
+.b{
+  position:relative;
+  margin:auto;
+
+}
 
 .rowOne {
 
   display:flex;
   justify-content: space-between;
   justify-content: space-around;
-  width:500px;
+
 
 }
 .rowTwo {
+
+
   display:flex;
   justify-content: space-between;
   justify-content: space-around;
-  width:500px;
   position: absolute;
-  bottom:10px;
+  left:0;
+  right:0;
+  bottom:0px;
+  margin:20px;
+
+
 
 }
 
@@ -23,12 +41,9 @@
   justify-content: space-between;
   position: absolute;
   top: 50%; left:50%;
-
   transform: translate(-50%,-50%);
-
-
-
 }
+
 .riverSlot{
 
   display:inline-flex;
@@ -55,15 +70,14 @@ justify-content: center;
 
 }
 
-
 .box{
 
-  position: relative;
 
+  margin:auto;
   padding: 20px;
-  margin: 10px;
-  height: 300px;
-  width:500px;
+  position:relative;
+  height: 400px;
+  width:auto;
   border: 5px black solid;
   background:green;
 }
